...
                                enharmonicPreferenceName = if (enharmonicPreference == EnharmonicPreference.SHARPS) {
                                    EnharmonicPreference.FLATS.name
                                } else {
                                    EnharmonicPreference.SHARPS.name
                                }
                            },
                            modifier = Modifier.testTag("enharmonic-toggle")
                        ) {
                            Text(
                                text = stringResource(
                                    if (enharmonicPreference == EnharmonicPreference.SHARPS) {
                                        R.string.enharmonic_preference_sharps
                                    } else {
...
